<resources>
    <string name="app_name">GiTop</string>
    <string name="welcome_text">Welcome to Ruby Github Repo top Contributors!</string>
    <string name="error_text">Oops! Click here to try again.</string>
    <string name="repo_dialog_title">Enter Repo Details:</string>
    <string name="repo_owner_hint">eg: google</string>
    <string name="repo_name_hint">eg: dagger</string>
    <string name="OK" />
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="menu_item_change_repo_title">Change Repo</string>
    <string name="loading_string">Fetching http://github.com/%1$s/%2$s</string>
    <string name="reset_string">Looks bad! Click here to reset defaults.</string>
    <string name="repo_dialog_owner_text_view">Repo Owner:</string>
    <string name="repo_dialog_repo_text_view">Repo Name:</string>
    <string name="repo_link">https://github.com/%1$s/%2$s</string>
</resources>
